--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ body {
 
 .burger {
   display: none;
+  opacity: 0;
 }
 
 /* hero */
@@ -153,6 +154,7 @@ body {
   .burger {
   display: block;
   margin-right: 15px;
+  opacity: 1;
   }
 
   .container {
