--- a/css/style.css
+++ b/css/style.css
@@ -60,9 +60,31 @@ body {
   padding: 12px 45px;
 }
 
+/* burger */
 .burger {
   display: none;
   opacity: 0;
+}
+
+.navbar__burger {
+  transition: 0.4s;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  width: 70%;
+  text-align: right;
+  position: absolute;
+  top: 0;
+  right: -1000px;
+  font-size: 33px;
+  background: #33447A;
+  border-radius: 15px;
+}
+
+.navbar__item__burger {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-right: 15px;
 }
 
 /* hero */
